didius/check.log
   Compiling pyo3-build-config v0.23.5
   Compiling pyo3-ffi v0.23.5
   Compiling pyo3-macros-backend v0.23.5
   Compiling pyo3 v0.23.5
   Compiling pyo3-macros v0.23.5
    Checking didius_oms v0.1.0 (/home/jongkook90/antigravity/didius/rust)
warning: unused import: `DateTime`
 --> src/oms/order.rs:4:14
  |
4 | use chrono::{DateTime, Local};
  |              ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `uuid::Uuid`
 --> src/oms/order.rs:5:5
  |
5 | use uuid::Uuid;
  |     ^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src/oms/order_book.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
 --> src/oms/order_book.rs:4:5
  |
4 | use std::str::FromStr;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `pyo3::types::PyDict`
 --> src/oms/engine.rs:2:5
  |
2 | use pyo3::types::PyDict;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `Trade`
  --> src/oms/engine.rs:16:39
   |
16 | use crate::adapter::{IncomingMessage, Trade};
   |                                       ^^^^^

warning: unused import: `std::collections::HashMap`
 --> src/oms/interface.rs:3:5
  |
3 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Position`
 --> src/adapter/mock.rs:3:41
  |
3 | use crate::oms::account::{AccountState, Position};
  |                                         ^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src/adapter/mock.rs:7:5
  |
7 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Arc`
  --> src/adapter/hantoo.rs:14:17
   |
14 | use std::sync::{Arc, Mutex};
   |                 ^^^

warning: unused import: `PriceLevel`
  --> src/adapter/hantoo.rs:23:46
   |
23 | use crate::oms::order_book::{OrderBookDelta, PriceLevel};
   |                                              ^^^^^^^^^^

warning: unused import: `warn`
 --> src/adapter/hantoo_futureoption_night.rs:6:24
  |
6 | use log::{error, info, warn};
  |                        ^^^^

warning: unused imports: `Deserialize` and `Serialize`
 --> src/adapter/hantoo_futureoption_night.rs:7:13
  |
7 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^

warning: unused import: `Arc`
  --> src/adapter/hantoo_futureoption_night.rs:10:17
   |
10 | use std::sync::{Arc, Mutex};
   |                 ^^^

warning: unused import: `PriceLevel`
  --> src/adapter/hantoo_futureoption_night.rs:17:46
   |
17 | use crate::oms::order_book::{OrderBookDelta, PriceLevel};
   |                                              ^^^^^^^^^^

warning: unused import: `OrderType`
 --> src/strategy/stop.rs:1:43
  |
1 | use crate::oms::order::{Order, OrderSide, OrderType, OrderState};
  |                                           ^^^^^^^^^

warning: unused import: `rust_decimal::prelude::*`
 --> src/strategy/stop.rs:5:5
  |
5 | use rust_decimal::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `anyhow`
 --> src/strategy/vwap.rs:4:22
  |
4 | use anyhow::{Result, anyhow};
  |                      ^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src/strategy/vwap.rs:6:5
  |
6 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated function `aws_config::from_env`: Use the `aws_config::defaults` function. If you don't care about future default behavior changes, you can continue to use this function by enabling the `behavior-version-latest` feature. Doing so will make this deprecation notice go away.
  --> src/logger/aws.rs:32:30
   |
32 |     let config = aws_config::from_env()
   |                              ^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `tungstenite::WebSocket::<Stream>::write_message`: Use `send`
   --> src/adapter/hantoo.rs:316:41
    |
316 |                          let _ = socket.write_message(Message::Text(sub_body.to_string()));
    |                                         ^^^^^^^^^^^^^

warning: use of deprecated method `tungstenite::WebSocket::<Stream>::write_message`: Use `send`
   --> src/adapter/hantoo.rs:337:40
    |
337 |                         let _ = socket.write_message(Message::Text(sub_body.to_string()));
    |                                        ^^^^^^^^^^^^^

warning: use of deprecated method `tungstenite::WebSocket::<Stream>::write_message`: Use `send`
   --> src/adapter/hantoo.rs:346:40
    |
346 |                         let _ = socket.write_message(Message::Text(sub_body.to_string()));
    |                                        ^^^^^^^^^^^^^

warning: use of deprecated method `tungstenite::WebSocket::<Stream>::read_message`: Use `read`
   --> src/adapter/hantoo.rs:353:38
    |
353 |                         match socket.read_message() {
    |                                      ^^^^^^^^^^^^

warning: use of deprecated method `tungstenite::WebSocket::<Stream>::write_message`: Use `send`
   --> src/adapter/hantoo.rs:359:60
    |
359 | ...                   let _ = socket.write_message(Message::Text(text)); 
    |                                      ^^^^^^^^^^^^^

warning: use of deprecated method `tungstenite::WebSocket::<Stream>::write_message`: Use `send`
  --> src/adapter/hantoo_futureoption_night.rs:95:44
   |
95 |                     if let Err(e) = socket.write_message(Message::Text(sub_body.to_string())) {
   |                                            ^^^^^^^^^^^^^

warning: use of deprecated method `tungstenite::WebSocket::<Stream>::write_message`: Use `send`
   --> src/adapter/hantoo_futureoption_night.rs:108:44
    |
108 |                     if let Err(e) = socket.write_message(Message::Text(sub_body_ask.to_string())) {
    |                                            ^^^^^^^^^^^^^

warning: use of deprecated method `tungstenite::WebSocket::<Stream>::read_message`: Use `read`
   --> src/adapter/hantoo_futureoption_night.rs:116:38
    |
116 |                         match socket.read_message() {
    |                                      ^^^^^^^^^^^^

warning: use of deprecated method `tungstenite::WebSocket::<Stream>::write_message`: Use `send`
   --> src/adapter/hantoo_futureoption_night.rs:122:60
    |
122 | ...                   let _ = socket.write_message(Message::Text(text)); 
    |                                      ^^^^^^^^^^^^^

warning: unused variable: `symbols`
   --> src/adapter/hantoo.rs:101:36
    |
101 |     pub fn subscribe_market(&self, symbols: &[String]) -> Result<()> {
    |                                    ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_symbols`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `symbol`
   --> src/adapter/hantoo.rs:135:36
    |
135 |     pub fn add_subscription(&self, symbol: String) {
    |                                    ^^^^^^ help: if this is intentional, prefix it with an underscore: `_symbol`

warning: unused variable: `tr_id`
   --> src/adapter/hantoo.rs:325:29
    |
325 |                         let tr_id = "H0STCNT0"; // Realtime Conclusion (General)? No, H0STCNT0 is the PATH.
    |                             ^^^^^ help: if this is intentional, prefix it with an underscore: `_tr_id`

warning: unused variable: `symbol`
   --> src/adapter/hantoo_futureoption_night.rs:163:13
    |
163 |         let symbol = parts[2];
    |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_symbol`

error[E0382]: borrow of moved value: `resp`
   --> src/adapter/hantoo_futureoption_night.rs:514:63
    |
502 |         let resp = client.get(&url)
    |             ---- move occurs because `resp` has type `reqwest::blocking::Response`, which does not implement the `Copy` trait
...
513 |              let t = resp.text().unwrap_or_default();
    |                           ------ `resp` moved due to this method call
514 |              return Err(anyhow!("Snapshot API Failed {}: {}", resp.status(), t));
    |                                                               ^^^^ value borrowed here after move
    |
note: `reqwest::blocking::Response::text` takes ownership of the receiver `self`, which moves `resp`
   --> /home/jongkook90/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/reqwest-0.11.27/src/blocking/response.rs:282:17
    |
282 |     pub fn text(self) -> crate::Result<String> {
    |                 ^^^^

warning: unused variable: `order_id`
  --> src/strategy/base.rs:11:42
   |
11 |     fn on_order_status_update(&mut self, order_id: &str, state: crate::oms::order::OrderState) -> Result<Option<Order>> {
   |                                          ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_order_id`

warning: unused variable: `state`
  --> src/strategy/base.rs:11:58
   |
11 |     fn on_order_status_update(&mut self, order_id: &str, state: crate::oms::order::OrderState) -> Result<Option<Order>> {
   |                                                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

warning: variable does not need to be mutable
  --> src/logger/mod.rs:92:13
   |
92 |         let mut messages = {
   |             ----^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0382`.
warning: `didius_oms` (lib) generated 36 warnings
error: could not compile `didius_oms` (lib) due to 1 previous error; 36 warnings emitted
